Use bootstrap from CDN and other minor changes.
The Bootstrap CDN thing because local compile doesn't work.

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
           <div class="col-2"><h4>About me</h4></div>
           <div class="col-md-12 col-lg-10 col-xl-12">
             <p>
-              Hi! 👋 My name is Abrahim but feel free to just call me Abe. 🙂 I was born and raised in
+              Hi! 👋 My name is Abrahim but feel free to just call me Abe. I was born and raised in
               Brooklyn, NY and currently reside in Northern New Jersey.
             </p>
 
@@ -367,7 +367,7 @@
       </section>
 
       <section id="footer">
-        <div class="container-xs justify-content-center">© Copyright 2023 Abrahim Gaber</div>
+        <div class="container-xs">© Copyright 2023 Abrahim Gaber</div>
       </section>
     </div>
 
