--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQCFH37SZC"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQCFH37SZC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-JQCFH37SZC');
-    </script> -->
+    </script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
