Use spritesheet for project images.

--- a/src/index.html
+++ b/src/index.html
@@ -142,8 +142,8 @@
                       metrics.
                     </li>
                     <li>
-                      Team Lead (TL); defined near + long term objectives and strategies; maintained
-                      high system availability; mentorship.
+                      Defined near + long term objectives and strategies as Team Lead (TL); maintained
+                      high system availability; provided mentorship to junior engineers.
                     </li>
                     <li>
                       Hands-on full-stack engineer; Polymer & TypeScript UI; Microservices; REST and
@@ -329,9 +329,7 @@
           <div class="col-2"><h4>Projects</h4></div>
           <div id="project-cards" class="col-md-12 col-lg-10 col-xl-12">
             <div class="card">
-              <img
-                class="card-img-top"
-                  src="https://www.logo.wine/a/logo/Reddit/Reddit-Vertical-Complete-White-Dark-Background-Logo.wine.svg" alt="Reddit card image" />
+              <div id="reddit-bot-img" class="card-img-top"></div>
               <div class="card-body">
                 <h5 class="card-title">Reddit Automation Bots</h5>
                 <p class="card-text">
@@ -346,7 +344,7 @@
             </div>
 
             <div id="votecard" class="card">
-              <img class="card-img-top" src="assets/agaberdev.png" alt="Reddit card image" />
+              <div id="vote-app-img" class="card-img-top"></div>
               <div class="card-body">
                 <h5 class="card-title">Vote App</h5>
                 <p class="card-text">
@@ -354,7 +352,7 @@
                   <a href="https://en.wikipedia.org/wiki/Instant-runoff_voting" target="_blank">Instant-runoff</a>
                   voting algorithm. The site was built with Kubernetes, Java, Spring Boot, MongoDB,
                   Angular and TypeScript. You can check out the code on
-                  <a href="https://github.com/agaber/vote" target="_blank">GitHub</a>
+                  <a href="https://github.com/agaber/vote" target="_blank">GitHub</a>.
                 </p>
                 <a class="btn btn-primary"
                   href="https://vote.agaber.dev/"
