Update resume text.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-JQCFH37SZC');
     </script>
 
@@ -150,6 +149,11 @@
                       RPC APIs; Spanner database design & optimization; Data Analytics and custom
                       dashboarding; Java Readability reviewer/mentor.
                     </li>
+                    <li>
+                      Java readability reviewer; Enforced Google's high standards for Java code by
+                      reviewing over 500 submissions. Mentored engineers by guiding them towards
+                      best practices, tools and conventions.
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -262,7 +266,7 @@
               <div id="csi" class="d-none d-md-block col-1"></div>
               <div class="col">
                 <div>
-                  <div class="title">B.S., Computer Science</div>
+                  <div class="title">Bachelor of Science - BS, Computer Science</div>
                   <div class="subtitle">
                     <span>City University of New York -- College of Staten Island</span>
                     <span>2004</span>
