--- a/src/index.html
+++ b/src/index.html
@@ -291,15 +291,16 @@
               <span class="badge bg-primary">C#</span>
               <span class="badge bg-primary">C++</span>
               <span class="badge bg-primary">SQL</span>
-              <span class="badge bg-primary">CSS</span>
+              <span class="badge bg-primary">CSS 3</span>
               <span class="badge bg-primary">Sass</span>
-              <span class="badge bg-primary">HTML</span>
+              <span class="badge bg-primary">HTML 5</span>
             </div>
 
             <div class="skills-section">
               <div class="title">Platforms, Frameworks & Tools</div>
               <span class="badge bg-primary">Kubernetes</span>
               <span class="badge bg-primary">gRPC</span>
+              <span class="badge bg-primary">Protocol Buffers</span>
               <span class="badge bg-primary">Angular</span>
               <span class="badge bg-primary">Spring</span>
               <span class="badge bg-primary">MongoDB</span>
@@ -315,9 +316,10 @@
 
             <div class="skills-section">
               <div class="title">General</div>
+              <span class="badge bg-primary">Object-Oriented Programming (OOP)</span>
               <span class="badge bg-primary">Distributed Systems</span>
               <span class="badge bg-primary">API Design</span>
-              <span class="badge bg-primary">REST</span>
+              <span class="badge bg-primary">RESTful Web Services</span>
               <span class="badge bg-primary">Frontend Web Development</span>
               <span class="badge bg-primary">Backend Systems Design</span>
               <span class="badge bg-primary">PubSub</span>
