--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,8 @@
             <p>
               I'm a software engineer by trade with professional experience deliving products at
               scale. I consider myself a generalist and a full stack engineer with a foundation in
-              computer science fundamentals. In my professional career I have worked with distributed
+              computer science fundamentals and an aptitude to learn quickly and adapt to new code
+              bases and tech stacks. In my professional career I have worked with distributed
               cloud systems, SQL and NoSQL databases, a variety of frontend frameworks, data
               processing and ETL pipelines and more using Big Tech proprietary tools.
             </p>
@@ -375,7 +376,8 @@
     </div>
 
     <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
   </body>
 </html>
